# madewithml

./: README.md  cluster_env.yaml  exportAnyscale.sh  main.py  notebook.ipynb  pyproject.toml  requirements.txt
00 - Fundamentals/: Attention.ipynb
00 - Fundamentals/Attention/: Attention.ipynb  best-model-parameters.pt  best_model.pt  label_encoder.json  tokenizer.json
00 - Fundamentals/Transformers/: Transformers.ipynb  performance.json  tokenizer.json
01 - Design/: 1.1-Design.ipynb
02 - Data/: 2.1-Preparation.ipynb
03 - Model/: 3.1 - Model.ipynb
